# avr-cmake-example

./: .gitignore  CMakeLists.txt  README.md
cmake-lists-files/: custom-avr.cmake
src/: CMakeLists.txt  main.c
src/example/: stub.c  stub.h
test/: CMakeLists.txt  main.c
test/example/: stub.c  stub.h
